--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.2'
 services:
   interop-db:
     image: postgres
+    environment:
+     POSTGRES_USER: "postgres"
+     POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - ./volumes/var/lib/postgresql/data:/var/lib/postgresql/data
   interop-server:
@@ -12,6 +15,9 @@ services:
       cache_from:
         - auvsisuas/interop-server:latest
     image: auvsisuas/interop-server
+    environment:
+     POSTGRES_USER: "postgres"
+     POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - ./volumes/mount:/mount
       - ./volumes/logs/uwsgi:/var/log/uwsgi
